# mouseseeks-dynamic-routing-metrics

./: .gitattributes  .pdm.toml  DynamicRouting1_638573_20220915_125610.hdf5  DynamicRouting1_674721_20230710_084322.hdf5  Makefile  generate_metrics.py  generate_plots.py  get_behavior_file.py  pyproject.toml  sean_table.html  table_example.html  table_example_2.html  test-get-file-windows.bat
