[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Chris Mochizuki", email = "chrism@alleninstitute.org"},
]
dependencies = [
    "numpy>=1.24.3",
    "matplotlib>=3.7.1",
    "scipy>=1.9.3",
    "pandas>=2.0.1",
    "h5py>=3.8.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
