[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Chris Mochizuki", email = "chrism@alleninstitute.org"},
]
dependencies = [
    "numpy>=1.24.3",
    "matplotlib>=3.7.1",
    "scipy>=1.9.3",
    "pandas>=2.0.1",
    "h5py>=3.8.0",
    "requests>=2.30.0",
    "beautifulsoup4>=4.12.2",
    "np-session>=0.6.4",
]
requires-python = ">=3.9"
license = {text = "MIT"}
